Cherry-pick : Fix #21563: Explore page count mismatch